--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -110,3 +110,13 @@ body {
 .data-2, .data-4 {
   background-color: #1b2344;
 }
+
+#back {
+  border: none;
+  box-shadow: none;
+
+  background-color: #ffffff;
+  border-radius: 10px;
+  margin: 0 auto;
+  text-align: center;
+}
