--- a/views/result.ejs
+++ b/views/result.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header") %>
 
 <% for (i=0; i < data.length; i++) {%>
-  <div class="dataTemplate my-5">
+  <div class="dataTemplate my-5 container-fluid px-3">
     <h6><%=i+1%></h6>
     <div class="data-1">
       <p class="dataType">Category</p>
