Stylize Back Button

--- a/views/result.ejs
+++ b/views/result.ejs
@@ -22,6 +22,6 @@
   </div>
 <%}%>
 
-<a href="/" id="back"><button >Back Home</button></a>
+<a href="/" class="center" style="text-decoration: none;"><button id="back" hre>Back Home</button></a>
 
 <%- include("partials/footer.ejs") %>
