--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -117,8 +117,6 @@ body {
   border: none;
   box-shadow: none;
 
-  background-color: #ffffff;
   border-radius: 10px;
-  margin: 0 auto;
-  text-align: center;
+  margin: 20px auto 80px auto;
 }
