--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -120,3 +120,9 @@ body {
   border-radius: 10px;
   margin: 20px auto 80px auto;
 }
+
+#aboutContainer {
+  width: 100%;
+  max-width: 700px;
+  margin: auto auto 50px auto;
+}
